--- a/src/components/widget/widget.scss
+++ b/src/components/widget/widget.scss
@@ -8,8 +8,7 @@
   border-radius: 10px;
   height: 100px;
 
-  .left,
-  .right {
+  .left,.right {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
