--- a/src/pages/new/new.scss
+++ b/src/pages/new/new.scss
@@ -60,6 +60,27 @@
             }
           }
 
+          .Input {
+            width: 40%;
+
+            label {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+
+              .icon {
+                cursor: pointer;
+              }
+            }
+
+            input {
+              width: 100%;
+              padding: 5px;
+              border: none;
+              border-bottom: 1px solid gray;
+            }
+          }
+
           button {
             width: 150px;
             padding: 10px;
